# model-election2

./: blueripple-model-election2.cabal  cabal.project
src/BlueRipple/Model/Election2/: DataPrep.hs  ModelCommon.hs  ModelCommon2.hs  ModelRunner.hs
